welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: '(' expected but '{' found.
		if {(nums(i)==9 ) }
                   ^arrayFront9:12: error: Unmatched closing brace '}' ignored here
 }
 ^